--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Juego Atrapa Corazones De Pame</title>
 </head>
 <body>
-    <script src="catch_hearts_game.js"></script> 
+    <script src="game_hearts_from_pame.js"></script> 
 </body>
 </html>
